# demo-pytest-examples

./: .gitignore  README.md
app/: Makefile  notebook.ipynb  pyproject.toml
app/tests/: test_pandas.py
decorators/: main.py  pyproject.toml
fastapi/: pyproject.toml
pandas/: notebook.ipynb  pyproject.toml
pandas/pipeline/: pandas.py
