[tool.poetry]
name = "pandas"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
black = "^22.10.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
